--- a/about.html
+++ b/about.html
@@ -9,6 +9,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <style>
+        .nav {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  background-color: black;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
         .card:hover{
             color: white;
             background-color: brown;
@@ -25,7 +32,7 @@
 </head>
 <body>
     <header>
-    <div class="header ms-4">
+    <div class="header ms-4 ">
         <h1 class="fw-bold  mb-0">Wanderer</h1>
         <p style="font-weight: 500;  text-align: left;">Your Ultimate Travel Guide</p>
     </div>
@@ -59,13 +66,13 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="card-title text-center">
-                            <h4>Vijay</h4>
-                            <img src="img/16170924.webp" class="card-img-top" alt="">
+                            <h4>Ajay</h4>
+                            <img src="img/andre2.jpg" class="card-img-top" alt="">
                             <div class="card-text">
-                                Vijay knows every hidden gem across Tamil Nadu — from the beaches of Rameswaram to the hills of Kodaikanal.
+                                Ajay knows every hidden gem across Tamil Nadu — from the beaches of Rameswaram to the hills of Kodaikanal.
 With a deep love for local culture and cuisine, he curates meaningful, authentic experiences.
 He ensures every journey within the state feels personal and unforgettable.
-Exploring Tamil Nadu? Vijay is your go-to guide. <br>
+Exploring Tamil Nadu? Ajay is your go-to guide. <br>
                             </div>                                
                         </div>
                     </div>
@@ -76,13 +83,13 @@ Exploring Tamil Nadu? Vijay is your go-to guide. <br>
                 <div class="card">
                     <div class="card-body">
                         <div class="card-title text-center">
-                            <h4>Ajith</h4>
-                            <img src="img/ajith-kumars-racing-team-shines-with-third-place-finish-at-dubai-24h-2025-bags-this-prestigious-award-800x420.jpg" class="card-img-top" alt="">
+                            <h4>Sujith</h4>
+                            <img src="img/naman3.jpg" class="card-img-top" alt="">
                             <div class="card-text">
-                                Ajith brings all of India onto your itinerary — deserts, mountains, rivers, and temples alike.
+                                Sujith brings all of India onto your itinerary — deserts, mountains, rivers, and temples alike.
 His knowledge spans from Kashmir to Kanyakumari, packed with travel hacks and smart routes.
 He designs smooth, well-balanced trips for every kind of traveler.
-Traveling anywhere across India? Ajith has you covered. <br>
+Traveling anywhere across India? Sujith has you covered. <br>
                             </div>                                
                         </div>
                     </div>
@@ -93,10 +100,10 @@ Traveling anywhere across India? Ajith has you covered. <br>
                 <div class="card">
                     <div class="card-body">
                         <div class="card-title text-center">
-                            <h4>Suriya</h4>
-                            <img src="img/soorarai-pottru_4.webp" class="card-img-top" alt="">
+                            <h4>Arya</h4>
+                            <img src="img/naman2.jpg" class="card-img-top" alt="">
                             <div class="card-text">
-                               Suriya handles global travel with ease — from European cities to tropical islands and snowy escapes. He crafts international trips that balance adventure, comfort, and culture. With strong research and a sharp eye for detail, your overseas journey is in safe hands. Dreaming beyond borders? Suriya makes it happen. <br>
+                               Arya handles global travel with ease — from European cities to tropical islands and snowy escapes. He crafts international trips that balance adventure, comfort, and culture. With strong research and a sharp eye for detail, your overseas journey is in safe hands. Dreaming beyond borders? Arya makes it happen. <br>
                             </div>                                
                         </div>
                     </div>
