--- a/header.html
+++ b/header.html
@@ -191,7 +191,7 @@
                             <img src="img/8994658f-13ad-4106-bde4-856450359f47.avif" class="card-img-top" alt="">
                             <div class="card-text">
                                 🌴 Bali — the “Island of the Gods” — is a tropical paradise in Indonesia that blends lush landscapes, spiritual heritage, and vibrant culture into one unforgettable destination. <br>
-                                <a href="#bali-details" class="mt-2 btn btn-primary btn-sm">Know More</a>
+                                <a href="destinations.html#bali-details" class="mt-2 btn btn-primary btn-sm">Know More</a>
                             </div>                                
                         </div>
                     </div>
@@ -205,8 +205,8 @@
                             <h4>Japan</h4>
                             <img src="img/Japan-2107x1406.jpg" class="card-img-top" alt="">
                             <div class="card-text">
-                                🌴 Japan is a fascinating blend of ancient tradition and cutting-edge modernity — a country where serene temples sit beside neon-lit skyscrapers, and centuries-old rituals coexist with futuristic tech.
-                                <a href="#japan-details" class="mt-2 btn btn-primary btn-sm">Know More</a>
+                                🌴 Japan is a fascinating blend of ancient tradition and cutting-edge modernity — a country where serene temples sit beside neon-lit skyscrapers, and centuries-old rituals coexist with futuristic tech. <br>
+                                <a href="destinations.html#japan-details" class="mt-2 btn btn-primary btn-sm">Know More</a>
                             </div>                                
                         </div>
                     </div>
@@ -220,8 +220,8 @@
                             <h4>Maldives</h4>
                             <img src="img/wp4483177.webp" class="card-img-top" alt="">
                             <div class="card-text">
-                                🏝️ The Maldives — a dreamscape of turquoise waters, white-sand beaches, and overwater villas — is a tropical paradise in the Indian Ocean that feels like it was made for postcards and daydreams.
-                                <a href="#maldives-details" class="mt-2 btn btn-primary btn-sm">Know More</a>
+                                🏝️ The Maldives — a dreamscape of turquoise waters, white-sand beaches, and overwater villas — is a tropical paradise in the Indian Ocean that feels like it was made for postcards and daydreams. <br>
+                                <a href="destinations.html#maldives-details" class="mt-2 btn btn-primary btn-sm">Know More</a>
                             </div>                                
                         </div>
                     </div>
