--- a/destinations.html
+++ b/destinations.html
@@ -71,7 +71,7 @@
                             <h4>Japan</h4>
                             <img src="img/Japan-2107x1406.jpg" class="card-img-top" alt="">
                             <div class="card-text">
-                                🌴 Japan is a fascinating blend of ancient tradition and cutting-edge modernity — a country where serene temples sit beside neon-lit skyscrapers, and centuries-old rituals coexist with futuristic tech.
+                                🌴 Japan is a fascinating blend of ancient tradition and cutting-edge modernity — a country where serene temples sit beside neon-lit skyscrapers, and centuries-old rituals coexist with futuristic tech. <br>
                                 <a href="#japan-details" class="mt-2 btn btn-primary btn-sm">Know More</a>
                             </div>                                
                         </div>
@@ -86,7 +86,7 @@
                             <h4>Maldives</h4>
                             <img src="img/wp4483177.webp" class="card-img-top" alt="">
                             <div class="card-text">
-                                🏝️ The Maldives — a dreamscape of turquoise waters, white-sand beaches, and overwater villas — is a tropical paradise in the Indian Ocean that feels like it was made for postcards and daydreams.
+                                🏝️ The Maldives — a dreamscape of turquoise waters, white-sand beaches, and overwater villas — is a tropical paradise in the Indian Ocean that feels like it was made for postcards and daydreams. <br>
                                 <a href="#maldives-details" class="mt-2 btn btn-primary btn-sm">Know More</a>
                             </div>                                
                         </div>
@@ -1066,20 +1066,6 @@ A slow, soulful escape in southern India.<br>
         </div>
     </div>
 </div>
-
-
-    <!-- Japan Section Placeholder -->
-    <div id="japan-details"></div>
-
-<!-- JavaScript to Load Japan Section -->
-<script>
-  fetch('japan.html')
-    .then(response => response.text())
-    .then(html => {
-      document.getElementById('japan-section').innerHTML = html;
-    });
-</script>
-
 
     <div class="footer w-100">
     <p>&copy;Wanderer - All rights reserved</p>
